force-app/core/main/default/objects/Demo_Persona_Alert__c/Demo_Persona_Alert__c.object-meta.xml
<CustomObject>
    <label>Persona AI Alert</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona AI Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona AI Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>