force-app/core/main/default/objects/Demo_Persona_Alert__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <description>One or two sentences describing the alert. Rendered plain-text.</description>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>