force-app/core/main/default/objects/Demo_Persona_Alert__c/fields/Category_Label__c.field-meta.xml
<CustomField>
    <fullName>Category_Label__c</fullName>
    <label>Category Label</label>
    <description>Short uppercase-style tag shown before the alert (e.g. "Retirement Gap", "Cash Optimization", "Debt Alert").</description>
    <length>40</length>
    <type>Text</type>
</CustomField>