force-app/core/main/default/objects/Demo_Persona_Alert__c/fields/Category_Style__c.field-meta.xml
<CustomField>
    <fullName>Category_Style__c</fullName>
    <label>Category Style</label>
    <description>Semantic color for the category chip. Maps to SLDS theme tokens in the renderer.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Info</fullName><default>true</default><label>Info</label></value>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Warning</fullName><default>false</default><label>Warning</label></value>
            <value><fullName>Danger</fullName><default>false</default><label>Danger</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>